# valbot-api

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Caddyfile.test  Dockerfile  HANDOFF.md  LICENSE  Makefile  PLANILHA_CUSTOS.csv  README.md  RESUMO_BENCH.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
backend/: __init__.py  app.py  models.py  persistence.py  pipeline.py
backend/api/: __init__.py  deps.py  routers.py
backend/committee/: __init__.py  comite.py
backend/compliance/: __init__.py  repositorio.py
backend/core/: __init__.py  config.py  db.py  security.py
backend/dashboard/: __init__.py  metrics.py
backend/detectors/: __init__.py
backend/detectors/art208/: __init__.py  core.py  (+2 more)
backend/engines/: __init__.py  comparacao.py  deteccao.py  evidencias.py  excecoes.py  normativo.py  pontuacao.py
backend/eval/: __init__.py  cases.py  cli.py  cost.py  gabarito.py  metrics.py
backend/ingestion/: __init__.py  resiliencia.py
backend/matriz/: __init__.py  correspondencia.py  prompt_builder.py  seed_mbedv.py
backend/reporting/: __init__.py  checklist_anexo_k.py  dossie_adapter.py  laudo.py  laudo_pdf_view.py  regras_laudo.py  textos_laudo.py
backend/workflow/: __init__.py  ordens.py
caddy/: Caddyfile
configs/references/: mbedv_fichas.json
deploy/: cloudflared.yml  cors.json  lifecycle.json  nginx.conf  provision.sh  start.sh  video_retention.py  web-nginx.conf
deploy/scripts/: migrate.sh  run_pending_s3.sh  test_paridade_prod.sh
docs/: API.md  HANDOFF_FILA_AUDITOR.md  HANDOFF_TELAS.md  PESQUISA_GPU_SPOT_PRICING.md  PESQUISA_MODELOS_LATEST.md  PESQUISA_THROUGHPUT.md  PIPELINE.md  PROMPT_CHANGELOG.md  ROADMAP_INFRA.md  ROADMAP_SAAS.md  arquitetura_analise.md  backend_v2_cobertura.md  constitution.md  divergencias_spec_v2.md  gap_analysis_spec_v2.md  gemini_vertex_setup.md  init-upload.md  init-upload.openapi.yaml  mapa_assertividade.md  mapa_funcionalidades_spec_x_valbot.md  mapa_infracoes_r1020_mbedv.md  prompts_tier1.md  relatorio_execucao_tier1.md
docs/01-briefing-discovery/: briefing.md
docs/adr/: 0001-vertex-ai.md  0002-cloudflare-tunnel.md  0003-postgres-na-vm.md
docs/deltas/: laudo-pdf-v2-prompt-endpoint.md
docs/edital/: valbot_edital.html
docs/flows/: init_upload.md  laudo_5_pareceres.md
docs/runbooks/: init-upload-por-renach.md
examples/: laudo_vid1.json
frontend/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
migrations/: 001_init.sql  002_api_keys.sql  003_external_id.sql  004_exam_extension.sql  005_resultado_exame.sql  006_resultado_exame_nao_avaliado.sql  007_training_annotations_jsonb.sql  008_laudo_envio.sql  009_matriz_nacional.sql  010_resultado_oficial.sql  011_eventos_enquadramento_divergencia.sql  012_comite_ia.sql  013_ordens_servico.sql  014_os_no_upload_sla.sql  015_ingest_dlq.sql  016_compliance.sql  017_parecer_auditor.sql  018_admin_users.sql  019_comite_pos_divergencia.sql  020_auditor_telemetria.sql  021_cron_jobs.sql  022_users.sql  023_drop_admin_users.sql  024_supervisor_homologar_conduta.sql  025_exam_rules_descricao.sql  026_exam_rules_descricao_data.sql  027_view_canonica_resultado_oficial.sql  028_view_sinalizadores_indicadores.sql  029_guard_veredito_consistente.sql  029_status_recebido_sem_oficial.sql  030_comite_resultado_ar.sql  031_buscas_oficial_ciclo_validacao.sql  032_comite_segunda_opiniao_auditor.sql  033_view_stage_divergencia_comite.sql  034_fix_view_stage_canonica.sql  034_log_tentativas_busca_oficial.sql  035_view_concluido_decisao_supervisor.sql  036_supervisor_resultado_final.sql  037_retry_count.sql  037_view_metrics_funil_catb.sql  (+1 more)
postgres/: Dockerfile  pg_cron.conf
sinalizacao/: DATASET_MASTER.md  ESTRATEGIA_AVALIACAO.md  README.md  RELATORIO_SIMULACAO.md
src/: analyzer.py  tier_a_pipeline.py
src/analysis/: gemini_analyzer.py  layout_discovery.py  openrouter_gemini.py  prompt_composer.py  vlm_engine.py
src/detectors/: base.py  cinto_heuristica.py  cinto_sampler.py  crosswalk.py  orchestrator.py  pare_sign.py  road_text.py  stop_detector.py  traffic_light.py  yolo_filter.py
src/ingestion/: grid_slicer.py  keyframe_detector.py
src/prompts/: base.py  tier1.py
src/reporting/: __init__.py  adapter.py  pdf.py  render_laudo_v2.py  schema.py
src/rubrics/: sinalizacao_horizontal.py  sinalizacao_vertical.py  taxonomia.py
src/utils/: logging_config.py
tests/: test_dashboard_diario.py  test_init_upload_batch.py  test_laudo_enriquecimento.py  test_preset_safety.py
tests/backend/: test_art208_core.py  test_art208_eval_vertex.py  test_compliance.py  test_dossie_adapter.py  test_eval_208.py  test_laudo_pdf_v2.py  test_matriz_mbedv.py  test_motores.py  test_pipeline.py  test_resiliencia.py
tests/e2e/: gemini-suggestions.json  run_e2e.sh  test_real_data.py  test_valbot_p0.py  test_valbot_prod.py
tests/fixtures/: db_laudo_dossie_exemplo.json  laudo_caso_real.json
tooling/: _run_5_videos.sh  aplicar_refutacoes.py  avaliador_simbolico.py  backfill_categoria.py  build_dataset_master.py  build_plano_pdf.py  build_resumo_chrysler.py  build_sinalizacao_library.py  build_techpratico_payloads.py  cv_detectors_runner.py  dev_backend_stub.py  extrair_crop.py  gemini_camera_check.py  gemini_test_suggestions.py  ingest_training_prints.py  limpar_videos_locais.py  pose_runner.py  process_pending_s3.py  recovery_failed_uploads.py  regen_laudo_tmpl.py  regen_laudos.py  render_heatmap.py  render_timeline.py  reprocess_batch.py  reprocessar_comite.py  run_yolo_custom_all_videos.py  scan_all_videos.py  scan_vid3_circuito.py  send_laudos_batch.py  sync_sinalizacao_to_panel.py  template_match_all_videos.py  valbot_down.sh  valbot_up.sh  vlm_validator.py  yolo_explore.py  yolo_train_sinalizacao.py  yolo_validate_crops.py
tooling/api_stub/: dados_exame_fetcher.py  db.py  laudo_sender.py  server.py
tooling/cvat_workflow/: valbot_labels.json
tooling/review_app/: server.py
(+101 files in other folders)
